<resources>
    <string name="app_name">Blue Skies</string>
    <string name="day_default">Wednesday</string>
    <string name="date_default">June 15, 2017</string>
    <string name="hi_temp_default">--\u00B0</string>
    <string name="low_temp_default">--\u00B0</string>
    <string name="present_temp_default">--\u00B0</string>
    <string name="temp_switch_default">---</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <!-- Notification -->
    <string name="notification_title">Today\'s Temperature</string>
    <string name="notification_message">message</string>
</resources>
