<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <TextView
        android:id="@+id/day_textview_main_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/day_default"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:text="Wednesday"
        app:layout_constraintHorizontal_bias="0.502" />

    <TextView
        android:id="@+id/date_textview_main_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/date_default"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_textview_main_frag"
        tools:text="May 29, 2017" />


    <TextView
        android:id="@+id/hi_temp_textview_main_frag"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:text="@string/hi_temp_default"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="64sp"
        tools:text="76\u00B0"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/date_textview_main_frag"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.23" />

    <TextView
        android:id="@+id/low_temp_textview_main_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_temp_default"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        tools:text="56\u00B0"
        app:layout_constraintLeft_toRightOf="@+id/hi_temp_textview_main_frag"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@+id/hi_temp_textview_main_frag"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/hi_temp_textview_main_frag"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_switch_default"
        tools:text="Fahrenheit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/hi_temp_textview_main_frag"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>