<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/hi_temp_textview_temperature_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/hi_temp_default"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/temp_switch_button_temperature_frag"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="76\u00B0" />

    <TextView
        android:id="@+id/low_temp_textview_temperature_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_temp_default"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        tools:text="56\u00B0"
        app:layout_constraintLeft_toRightOf="@+id/hi_temp_textview_temperature_frag"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/hi_temp_textview_temperature_frag"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/hi_temp_textview_temperature_frag"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.428"
        app:layout_constraintHorizontal_bias="0.08" />

    <Button
        android:id="@+id/temp_switch_button_temperature_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_switch_default"
        android:onClick="onClickTemperatureSwitch"
        tools:text="Fahrenheit"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/low_temp_textview_temperature_frag"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/hi_temp_textview_temperature_frag"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="64dp" />

    <TextView
        android:id="@+id/present_temp_textview_temperature_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/present_temp_default"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@+id/hi_temp_textview_temperature_frag"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="76\u00B0" />

</android.support.constraint.ConstraintLayout>